istio/kibana-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: elasticsearch
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - kibana.example.com
  # http://kibana.example.com/app/kibana is the correct context path
  #   tls:
  #     httpsRedirect: true # sends 301 redirect for http requests
  # - port:
  #     number: 443
  #     name: https-443
  #     protocol: HTTPS
  #   hosts:
  #   - kibana.example.com
  #   tls:
  #     mode: SIMPLE # enables HTTPS on this port
  #     serverCertificate: /etc/certs/servercert.pem
  #     privateKey: /etc/certs/privatekey.pem
