istio/virtual-service-kibana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-rule
  namespace: elasticsearch
spec:
  hosts:
  - kibana.example.com
  gateways:
  - elasticsearch/kibana-gateway
  # - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: elasticsearch-kibana.elasticsearch.svc.cluster.local
        port:
          number: 5601
